--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,17 @@
     ],
     "require": {
         "php": "^8.0",
-        "phant/data-structure": "3.*",
-        "phant/domain-name": "1.*",
+        "phant/data-structure": "4.*",
+        "phant/domain-name": "2.*",
         "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/phpstan": "^1.4",
         "phpunit/phpunit": "^9.5"
     },
     "scripts": {
+        "lint": "vendor/bin/php-cs-fixer fix ./ --rules=@PSR12",
         "analyse": "vendor/bin/phpstan analyse component --memory-limit=4G",
         "test": "vendor/bin/phpunit test --testdox"
     },
