--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=8.1",
         "phant/data-structure": "4.*",
         "phant/domain-name": "2.*",
-        "guzzlehttp/guzzle": "^7.4"
+        "guzzlehttp/guzzle": "^7.4",
+        "twig/twig": "^3.8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
