--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         "php": ">=8.1",
         "phant/data-structure": "4.*",
         "phant/domain-name": "2.*",
-        "guzzlehttp/guzzle": "^7.4",
-        "twig/twig": "^3.8"
+        "guzzlehttp/guzzle": "7.*",
+        "twig/twig": "3.*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "phpstan/phpstan": "^1.4",
-        "phpunit/phpunit": "^9.5"
+        "friendsofphp/php-cs-fixer": "3.*",
+        "phpstan/phpstan": "1.*",
+        "phpunit/phpunit": "9.*"
     },
     "scripts": {
         "lint": "vendor/bin/php-cs-fixer fix ./ --rules=@PSR12",
